--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "mongoose": "^8.3.1",
     "node": "^18.20.1",
+    "pg": "^8.11.5",
     "post": "^0.0.1"
   }
 }
